plugins {
    id "se.inera.intyg.plugin.common" version "3.1.1" apply false
    id "org.gretty" version "3.0.1" apply false
    id "io.spring.dependency-management" version "1.0.9.RELEASE"
}

ext {
    commonVersion = System.properties['commonVersion'] ?: '3.13.1-SNAPSHOT'
    infraVersion = System.properties['infraVersion'] ?: '3.13.1-SNAPSHOT'
    refDataVersion = System.properties['refDataVersion'] ?: '1.0-SNAPSHOT'

    schemasContractVersion = "2.1.8"

    intygHealthcondRehabilitationSchemasVersion = "1.1.3"
    intygClinicalprocessSchemasVersion = "1.0.23"
    rivtaClinicalprocessSchemasVersion = "4.0.5"
    rivtaItintegrationMonitoringSchemasVersion = "1.0.0.5"

    cxfVersion = "3.2.4"
    geronimoJmsVersion = "1.1.1"
    hibernateVersion = "5.3.15.Final" // included because of bug in BOM version 5.4.12
    jadiraUserTypeVersion = "6.0.1.GA"
    javaxActivationVersion = "1.2.0"
    jakartaJwsApiVersion = "2.1.0"
    stAntlr4Version = "4.3"

    springbootMavenBomVersion = "2.2.5.RELEASE"
}

allprojects {
    apply plugin: 'se.inera.intyg.plugin.common'
    apply plugin: 'maven'
    apply plugin: "io.spring.dependency-management"

    repositories {
        mavenLocal()
        maven { url "https://build-inera.nordicmedtest.se/nexus/repository/public/" }
        jcenter {
            content {
                // this repository contains everything BUT artifacts with group starting with "se.inera"
                excludeGroupByRegex "se\\.inera.*"
            }
        }
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:${springbootMavenBomVersion}"
        }
    }

    dependencies {
        // Exclude and import of non-BOM version of Hibernate due to
        // bug in BOM-version 5.4.12.
        compile("org.hibernate:hibernate-core") {
            version {
                strictly "${hibernateVersion}"
            }
        }
        compile("org.hibernate:hibernate-hikaricp") {
            version {
                strictly "${hibernateVersion}"
            }
        }
        compile("org.hibernate:hibernate-entitymanager") {
            version {
                strictly "${hibernateVersion}"
            }
        }

        compile "javax.annotation:javax.annotation-api"
        compile "jakarta.xml.bind:jakarta.xml.bind-api"
        compile "jakarta.xml.ws:jakarta.xml.ws-api"
        compile "jakarta.jws:jakarta.jws-api:${jakartaJwsApiVersion}"
        compile "com.sun.xml.messaging.saaj:saaj-impl"

        testCompile "se.inera.intyg.refdata:refdata:${refDataVersion}"
        testCompile "junit:junit:4.+"
        testCompile "org.mockito:mockito-core"
    }

    group = 'se.inera.intyg.intygstjanst'
    version = System.properties['buildVersion'] ?: '0-SNAPSHOT'

    sourceCompatibility = 11
    targetCompatibility = 11

    task createVersionPropertyFile(type: VersionPropertyFileTask)

    uploadArchives.repositories.mavenDeployer {
        repository(url: "https://build-inera.nordicmedtest.se/nexus/repository/releases/") {
            authentication(userName: System.properties['nexusUsername'], password: System.properties['nexusPassword'])
        }
    }

    compileJava {
        options.encoding = "UTF-8"
    }

    uploadArchives.enabled = false

    [install.repositories.mavenInstaller, uploadArchives.repositories.mavenDeployer]*.pom*.whenConfigured { pom ->
        pom.dependencies.findAll { dep -> dep.groupId == 'se.inera.intyg.common' }.each {
            it.version = se.inera.intyg.IntygPluginKt.findResolvedVersion(project, 'se.inera.intyg.common')
        }
        pom.dependencies.findAll { dep -> dep.groupId == 'se.inera.intyg.infra' }.each {
            it.version = se.inera.intyg.IntygPluginKt.findResolvedVersion(project, 'se.inera.intyg.infra')
        }
    }

}

task tagRelease(type: TagReleaseTask)

